--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.7</java.version>
     <additionalparam>-Xdoclint:none</additionalparam>
+    <doclint>none</doclint>
   </properties>
 
   <dependencies>
