--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+      </plugin>
     </plugins>
   </build>
 </project>
