--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,17 +11,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-      with:
-        submodules: true
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'zulu'
-        cache: maven
-    - run: mvn clean source:jar javadoc:jar -Dmaven.test.skip=true
-    - uses: actions/upload-artifact@v3
-      with:
-        name: build-out-jars
-        path: target/*.jar
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+      - run: ./gradlew build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: build-out-jars
+          path: build/libs/*.jar
