--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
   id "java-library"
+  id "com.vanniktech.maven.publish" version "0.26.0"
 }
 
 repositories {
@@ -10,19 +11,12 @@ dependencies {
   testImplementation "junit:junit:4.13.2"
 }
 
-group = "com.jakewharton.android.repackaged"
-version = "HEAD-SNAPSHOT"
-description = "platform/dalvik dx"
-
 sourceSets {
   main.java.srcDir("platform_dalvik/dx/src")
   test.java.srcDir("platform_dalvik/dx/junit-tests")
 }
 
 java {
-  withJavadocJar()
-  withSourcesJar()
-
   sourceCompatibility JavaVersion.VERSION_1_8
   targetCompatibility JavaVersion.VERSION_1_8
 }
