--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,31 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: 17
-      - run: ./gradlew build
+
+      - run: ./gradlew build javadoc
+
       - uses: actions/upload-artifact@v4
         with:
           name: build-out-jars
           path: build/libs/*.jar
+
       - run: ./gradlew publish
         if: ${{ github.ref == 'refs/heads/trunk' && github.repository == 'JakeWharton/dalvik-dx' }}
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
+
+      - name: Deploy docs to website
+        if: ${{ github.ref == 'refs/heads/trunk' && github.repository == 'JakeWharton/dalvik-dx' }}
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: site
+          FOLDER: build/docs/javadoc
+          TARGET_FOLDER: docs/latest/
+          CLEAN: true
