--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,13 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": ["^.github/workflows/.*\\.ya?ml$"],
+      "matchStrings": ["java-version: (?<currentValue>\\d+)\\n"],
+      "datasourceTemplate": "java-version"
+    }
   ]
 }
