Add depNameTemplate to java-version renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
       "customType": "regex",
       "fileMatch": ["^.github/workflows/.*\\.ya?ml$"],
       "matchStrings": ["java-version: (?<currentValue>\\d+)\\n"],
+      "depNameTemplate": "java",
       "datasourceTemplate": "java-version"
     }
   ]
