--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 GROUP=com.jakewharton.android.repackaged
-VERSION_NAME=14.0.0_r18-SNAPSHOT
+VERSION_NAME=14.0.0_r21
 
-POM_DESCRIPTION=platform/dalvik dx
+POM_ARTIFACT_ID=dalvik-dx
+POM_NAME=dalvik-dx
+POM_DESCRIPTION=AOSP's platform/dalvik-dx
 
 POM_URL=https://github.com/JakeWharton/dalvik-dx/
 POM_SCM_URL=https://github.com/JakeWharton/dalvik-dx/
@@ -15,6 +17,9 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=jakewharton
 POM_DEVELOPER_NAME=Jake Wharton
 
+SONATYPE_HOST=DEFAULT
+SONATYPE_AUTOMATIC_RELEASE=true
+RELEASE_SIGNING_ENABLED=true
 
 org.gradle.caching=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
