Prepare next development version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton.android.repackaged
-VERSION_NAME=14.0.0_r21
+VERSION_NAME=HEAD-SNAPSHOT
 
 POM_ARTIFACT_ID=dalvik-dx
 POM_NAME=dalvik-dx
